*
* 1.2.10
*

- Event processing policy rules can be exported and imported
- NXSL:
	- Implemented post-increment and post-decrement for array elements
- Fixed issues: #226, #378


*
* 1.2.9
*

- Templates can be applied on clusters
- Filters for automaticaly populated network maps
- User-defined constants in NXSL
- New methods deleteColumn and deleteRow in NXSL class Table
- New NXSL functions: chr, ord
- HTTPS support in port checker subagent
- Added MIBs for Nortel/Trapeze Wireless security switches
- New MIBs: BAY-STACK-NOTIFICATIONS-MIB, SUN-HW-CTRL-MIB, SUN-HW-TRAP-MIB, 
            SUN-PLATFORM-MIB
- Management console:
	- New dashboard elements: status map and table value
- Fixed issues: #202, #300, #304, #305, #309, #311, #325, #327, #332, #334,
                #335, #336, #337, #338, #339, #340, #342


*
* 1.2.8
*

- Support for data collection using SM-CLP protocol
- Aggregated DCI values on cluster objects
- Transformation scripts for table DCIs
- Support for multi-column keys (instances) in table DCIs
- Implemented SNMP table DCIs
- Configurable DCI summary tables
- Default background color for new network maps made configurable
- Logged in users cannot be deleted
- Empty containters have "Normal" status instead of "Unknown"
- New NXSL functions: AgentReadTable, DeleteObject, GetDCIRawValue
- Map objects can have status calculated from contained objects' status
- SNMP trap listener port now configurable
- HP-UX agent improved
- Some D-Link MIBs added to distribution
- Debian binaries built in UNICODE mode
- Management console:
	- Simplified table DCI configuration
	- Charts can be created from table data
	- Severity filter in dashboard element "Alarm Viewer"
	- Zoom level can be configured for "Network Map" dashboard elements
	- Values of custom attributes can be used in object tools
	- Vertical orientation for dial chart elements
- Web UI:
	- Single sign-on support using CAS
	- Configuration file nxmc.properties can be placed outside of war file