@@ -5,6 +5,8 @@
 - Event processing policy rules can be exported and imported
 - NXSL:
 	- Implemented post-increment and post-decrement for array elements
+- Management console:
+	- New command line option -fullscreen
 - Fixed issues: #226, #378
 
 
